compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__case__case_building_record_with_labels_matched_by_pattern_6.snap
---
source: compiler-core/src/javascript/tests/case.rs
expression: "\npub type Wibble {\n  Wibble(int: Int, string: String)\n  Wobble(Int)\n}\n\npub fn go(x) {\n   case x {\n     Wibble(1, string:) -> Wibble(string:, int: 1)\n     _ -> Wobble(1)\n   }\n}"
---
----- SOURCE CODE

pub type Wibble {
  Wibble(int: Int, string: String)
  Wobble(Int)
}

pub fn go(x) {
   case x {
     Wibble(1, string:) -> Wibble(string:, int: 1)
     _ -> Wobble(1)
   }
}

----- COMPILED JAVASCRIPT
import { CustomType as $CustomType } from "../gleam.mjs";

export class Wibble extends $CustomType {
  constructor(int, string) {
    super();
    this.int = int;
    this.string = string;
  }
}
export const Wibble$Wibble = (int, string) => new Wibble(int, string);
export const Wibble$isWibble = (value) => value instanceof Wibble;
export const Wibble$Wibble$int = (value) => value.int;
export const Wibble$Wibble$0 = (value) => value.int;
export const Wibble$Wibble$string = (value) => value.string;
export const Wibble$Wibble$1 = (value) => value.string;

export class Wobble extends $CustomType {
  constructor($0) {
    super();
    this[0] = $0;
  }
}
export const Wibble$Wobble = ($0) => new Wobble($0);
export const Wibble$isWobble = (value) => value instanceof Wobble;
export const Wibble$Wobble$0 = (value) => value[0];

export function go(x) {
  if (x instanceof Wibble && x.int === 1) {
    return x;
  } else {
    return new Wobble(1);
  }
}
