compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__case__case_building_record_with_select_matched_by_pattern.snap
---
source: compiler-core/src/javascript/tests/case.rs
expression: "\nimport gleam\n\npub fn go(x) {\n   case x {\n     Ok(1) -> gleam.Ok(1)\n     _ -> Error(Nil)\n   }\n}"
---
----- SOURCE CODE

import gleam

pub fn go(x) {
   case x {
     Ok(1) -> gleam.Ok(1)
     _ -> Error(Nil)
   }
}

----- COMPILED JAVASCRIPT
import * as $gleam from "../gleam.mjs";
import { Ok, Error } from "../gleam.mjs";

export function go(x) {
  if (x instanceof Ok && x[0] === 1) {
    return x;
  } else {
    return new Error(undefined);
  }
}
