compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__case__case_matching_single_character_prefixes.snap
---
source: compiler-core/src/javascript/tests/case.rs
expression: "\npub fn parse_digit(s: String) -> Int {\n  case s {\n    \"0\" <> s -> 0\n    \"1\" <> s -> 1\n    \"2\" <> s -> 2\n    \"3\" <> s -> 3\n    \"4\" <> s -> 4\n    \"5\" <> s -> 5\n    \"6\" <> s -> 6\n    \"7\" <> s -> 7\n    \"8\" <> s -> 8\n    \"9\" <> s -> 9\n    \"\" -> todo\n    _ -> panic\n  }\n}\n"
---
----- SOURCE CODE

pub fn parse_digit(s: String) -> Int {
  case s {
    "0" <> s -> 0
    "1" <> s -> 1
    "2" <> s -> 2
    "3" <> s -> 3
    "4" <> s -> 4
    "5" <> s -> 5
    "6" <> s -> 6
    "7" <> s -> 7
    "8" <> s -> 8
    "9" <> s -> 9
    "" -> todo
    _ -> panic
  }
}


----- COMPILED JAVASCRIPT
import { makeError } from "../gleam.mjs";

const FILEPATH = "src/module.gleam";

export function parse_digit(s) {
  let $ = s.charCodeAt(0);
  if ($ === 48) {
    let s$1 = s.slice(1);
    return 0;
  } else if ($ === 49) {
    let s$1 = s.slice(1);
    return 1;
  } else if ($ === 50) {
    let s$1 = s.slice(1);
    return 2;
  } else if ($ === 51) {
    let s$1 = s.slice(1);
    return 3;
  } else if ($ === 52) {
    let s$1 = s.slice(1);
    return 4;
  } else if ($ === 53) {
    let s$1 = s.slice(1);
    return 5;
  } else if ($ === 54) {
    let s$1 = s.slice(1);
    return 6;
  } else if ($ === 55) {
    let s$1 = s.slice(1);
    return 7;
  } else if ($ === 56) {
    let s$1 = s.slice(1);
    return 8;
  } else if ($ === 57) {
    let s$1 = s.slice(1);
    return 9;
  } else if (s === "") {
    throw makeError(
      "todo",
      FILEPATH,
      "my/mod",
      14,
      "parse_digit",
      "`todo` expression evaluated. This code has not yet been implemented.",
      {}
    )
  } else {
    throw makeError(
      "panic",
      FILEPATH,
      "my/mod",
      15,
      "parse_digit",
      "`panic` expression evaluated.",
      {}
    )
  }
}
