compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__case__case_with_record_const_as_subject_with_record_constructor_clause_and_referencing_same_const_inside_clause_consequence.snap
---
source: compiler-core/src/javascript/tests/case.rs
expression: "\npub type Wibble {\n  Wibble\n  Wobble(int: Int)\n}\n\nconst wibble = Wibble\n\npub fn main() {\n  case wibble {\n    Wobble(_) -> wibble\n    wobble -> wibble\n  }\n}\n"
---
----- SOURCE CODE

pub type Wibble {
  Wibble
  Wobble(int: Int)
}

const wibble = Wibble

pub fn main() {
  case wibble {
    Wobble(_) -> wibble
    wobble -> wibble
  }
}


----- COMPILED JAVASCRIPT
import { CustomType as $CustomType } from "../gleam.mjs";

export class Wibble extends $CustomType {}
export const Wibble$Wibble = () => new Wibble();
export const Wibble$isWibble = (value) => value instanceof Wibble;

export class Wobble extends $CustomType {
  constructor(int) {
    super();
    this.int = int;
  }
}
export const Wibble$Wobble = (int) => new Wobble(int);
export const Wibble$isWobble = (value) => value instanceof Wobble;
export const Wibble$Wobble$int = (value) => value.int;
export const Wibble$Wobble$0 = (value) => value.int;

const wibble = /* @__PURE__ */ new Wibble();

export function main() {
  let $ = wibble;
  if ($ instanceof Wobble) {
    return wibble;
  } else {
    let wobble = $;
    return wibble;
  }
}
